--- a/Extended model/Testing odin with Bayesian tools.Rmd
+++ b/Extended model/Testing odin with Bayesian tools.Rmd
@@ -243,12 +243,129 @@ marginalPlot(trace, prior = T, singlePanel = T, start = nburn, nDrawsPrior = 100
 # remove burn-in for trajsim simulation
 tracefinal <- getSample(trace, parametersOnly = TRUE, coda = TRUE, start = nburn)
 plot(tracefinal)
-effectiveSize(tracefinal)
+coda::effectiveSize(tracefinal)
 
 # Posterior summary
 summary(tracefinal)
 
 # save the trace
 saveRDS(trace, "/Users/juliamayer/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/LSTHM project/Extension/Odin model with BT.rds")
+```
+
+```{r}
+maketrajsim <- function(trace, theta, ndraw, data) {
+  
+  #Draw n fitted parameter vectors theta from the MCMC object
+  sample <- getSample(trace, parametersOnly = TRUE, thin = 1, numSamples = ndraw) #trace is a sampler, parametersOnly = T means that likelihood, posterior and prior values are not provided in the output, thin = thinning parameter
+  
+  traj.rep <- plyr::adply(.data = sample, .margins = 1, .progress = "text", .parallel = F, .fun = function(x) { #split sample by 1 = rows and apply function
+    
+    #Define the theta as the estimated parameters from the current draw and the fixed parameters
+    theta.sample <- c(x, theta[!is.na(theta)])
+    
+    #Simulate trajectory for selected theta
+    traj <- model_fun(theta.sample) #match.fun extracts the underlying function
+    traj <- cbind(as.data.frame(t(x)), traj)
+  })
+  
+  colnames(traj.rep)[1] <- "replicate"
+  return(traj.rep)
+  
+}
+
+trajsim <- maketrajsim(tracefinal, params, ndraw = 1000)
+```
+
+```{r}
+# Proportion converted overall
+trajquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+                             function(x) quantile(x[,"prop_sero_tot"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(trajquantiles) <- c("agemid", "low95", "median", "up95")
+
+# Overall incidence overtime
+trajquantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+                             function(x) quantile(x[,"R_all"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(trajquantiles_inc) <- c("agemid", "low95", "median", "up95")
+
+
+# FOI per birth cohort
+# lambda_spquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                   function(x) quantile(x[,"lambda_sp"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(lambda_spquantiles) <- c("agemid", "low95", "median", "up95")
+# 
+# lambda_smquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                   function(x) quantile(x[,"lambda_sm"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(lambda_smquantiles) <- c("agemid", "low95", "median", "up95")
+# 
+# lambda_auquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                   function(x) quantile(x[,"lambda_au"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(lambda_auquantiles) <- c("agemid", "low95", "median", "up95")
+# 
+# lambda_wtquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                   function(x) quantile(x[,"lambda_wt"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(lambda_wtquantiles) <- c("agemid", "low95", "median", "up95")
+
+# Parameter estimates
+Pquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+                          function(x) quantile(x[,"par 1"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(Pquantiles) <- c("agemid", "low95", "median", "up95")
+
+Mquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+                          function(x) quantile(x[,"par 2"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(Mquantiles) <- c("agemid", "low95", "median", "up95")
+
+Aquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+                          function(x) quantile(x[,"par 3"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(Aquantiles) <- c("agemid", "low95", "median", "up95")
+
+Wquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+                          function(x) quantile(x[,"par 4"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(Wquantiles) <- c("agemid", "low95", "median", "up95")
+
+
+# Cumulative proportion seroconverted by season of birth
+# spring_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                      function(x) quantile(x[,"conv_spring"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(spring_conv_quantiles) <- c("agemid", "low95", "median", "up95")
+# 
+# summer_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                      function(x) quantile(x[,"conv_summer"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(summer_conv_quantiles) <- c("agemid", "low95", "median", "up95")
+# 
+# autumn_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                      function(x) quantile(x[,"conv_autumn"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(autumn_conv_quantiles) <- c("agemid", "low95", "median", "up95")
+# 
+# winter_conv_quantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
+#                                      function(x) quantile(x[,"conv_winter"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+# colnames(winter_conv_quantiles) <- c("agemid", "low95", "median", "up95")
+
+# Incident proportion seroconverted by season of birth
+spring_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+                                     function(x) quantile(x[,"R_sp"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(spring_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
+
+summer_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+                                     function(x) quantile(x[,"R_sm"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(summer_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
+
+autumn_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+                                     function(x) quantile(x[,"R_au"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(autumn_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
+
+winter_conv_quantiles_inc <- plyr::ddply(.data = trajsim, .variables = "time", 
+                                     function(x) quantile(x[,"R_wt"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
+colnames(winter_conv_quantiles_inc) <- c("agemid", "low95", "median", "up95")
+
+# Plot fit and FOI
+# Whole dataset
+fit <- ggplot() + theme_bw() + ggtitle("Model fit") +
+  geom_point(data = data_no_season, aes(x = agemid, y = seroprev_mean)) +
+  geom_linerange(data = data_no_season, aes(x = agemid, ymin = seroprev_low95, ymax = seroprev_up95)) +
+  geom_ribbon(data = trajquantiles, aes(x = agemid, ymin = low95, ymax = up95), fill = "red", alpha = 0.3) +
+  geom_line(data = trajquantiles, aes(x = agemid, y = median), color = "red") +
+  xlab("age (days)") + ylab("proportion seroconverted") 
+
+fit
 ```
 
