--- a/Extended model/Testing odin with Bayesian tools.Rmd
+++ b/Extended model/Testing odin with Bayesian tools.Rmd
@@ -159,22 +159,9 @@ loglik <- function(params) {
 } 
 
 # Test function
-params <- c(0.00001, 0.02002, 0.00003, 0.00004)
+theta <- c(0.00001, 0.02002, 0.00003, 0.00004)
 
-loglik(params)
-
-# Wrapper for BT: loglik can only take the fitted parameters as argument
-# loglik_wrapper <- function(par) {
-#   
-#   parX = theta
-#   parX[index] = par
-#   
-#   return(loglik(theta = parX,
-#                 age = agepred, 
-#                 data = data_no_season,
-#                 model = match.fun(model),
-#                 inits = inits))
-# } 
+loglik(theta)
 
 # FITTING -------------------------------------------
 
@@ -183,47 +170,19 @@ loglik(params)
 # summer_comp = mean FOI for children in summer
 # autumn_comp = mean FOI for children in autumn
 # winter_comp = mean FOI for children in winter
-# theta <- c(spring_comp = 0.00001, summer_comp = 0.02002, autumn_comp = 0.00003, winter_comp = 0.00004) # these are just random values, to be fitted
-# 
-# estpars <- c("spring_comp", "summer_comp", "autumn_comp", "winter_comp") # parameters to estimate, can be modified
-# index <- which(names(theta) %in% estpars) # index of estimated params
-# 
-# 
-# # Priors
-# lower = c(0, 0, 0, 0)
-# upper = c(0.1, 0.1, 0.1, 0.1)
-# 
-# prior <- createUniformPrior(lower=lower[estpars], 
-#                             upper=upper[estpars])
-
-# MCMC settings
-# nchains <- 2
-# cpus <- 1 # or 2 if you want parallel, but it does not seem to be faster?
-# mcmc_settings <- list(iterations = 2*80000, 
-#                       nrChains = nchains)
-# sampler <- "Metropolis"
-# 
-# if (cpus == 1) {
-#   bayesianSetup <- createBayesianSetup(prior = prior,
-#                                        likelihood = loglik_wrapper,
-#                                        names = names(theta[index]),
-#                                        parallel = FALSE)
-#   
-#   system.time({trace <- runMCMC(bayesianSetup = bayesianSetup, 
-#                                 sampler = sampler, 
-#                                 settings = mcmc_settings)})
-#   
-# }
+estpars <- c("spring_comp", "summer_comp", "autumn_comp", "winter_comp") # parameters to estimate, can be modified
+index <- which(names(theta) %in% estpars) # index of estimated params
 
 bayesianSetup <- createBayesianSetup(likelihood = loglik, 
                                     lower = lower, 
-                                    upper = upper)
+                                    upper = upper,
+                                    names = names(theta[index]))
 nchains <- 2
 mcmc_settings <- list(iterations = 2*80000, 
                       nrChains = nchains)
-trace <- runMCMC(bayesianSetup = bayesianSetup, 
+system.time({trace <- runMCMC(bayesianSetup = bayesianSetup, 
                    sampler = "Metropolis", 
-                   settings = mcmc_settings)
+                   settings = mcmc_settings)})
 ```
 
 ```{r}
