--- a/Extended model/Testing odin with Bayesian tools.Rmd
+++ b/Extended model/Testing odin with Bayesian tools.Rmd
@@ -22,6 +22,7 @@ theme_set(theme_minimal())
 ```{r}
 # Load model
 gen_msr <- odin_dust("~/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/LSTHM project/Extension/RSV_infection_NL/Extended model/Odin model.R")
+# gen_msr <- odin_dust("~/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/LSTHM project/Extension/RSV_infection_NL/Extended model/Odin model 1 M comp.R")
 ```
 
 ```{r}
@@ -108,6 +109,14 @@ output_df_names <- c("time",
                 "M1_au", "M2_au", "S_au", "R_au",
                 "M1_wt", "M2_wt", "S_wt", "R_wt", "R_all")
 
+# output_df_names <- c("time",
+#                 "M_sp", "S_sp", "R_sp",
+#                 "M_sm", "S_sm", "R_sm",
+#                 "M_au", "S_au", "R_au",
+#                 "M_wt", "S_wt", "R_wt", "R_all",
+#                 "lambda_spring", "lambda_summer", "lambda_autumn", "lambda_winter",
+#                 "spring_component", "summer_component", "autumn_component", "winter_component")
+
 output_df_w_names <- cbind(output_df_names, output_df)
 
 # Transpose and assign names
@@ -120,8 +129,30 @@ output_transp <- output_transp %>% group_by(time) %>%
                                      M2_sp, M2_sm, M2_au, M2_wt,
                                      S_sp, S_sm, S_au, S_wt,
                                      R_sp, R_sm, R_au, R_wt))
+
+# output_transp <- output_transp %>% group_by(time) %>%
+#   mutate(prop_sero_tot = R_all / sum(M_sp, M_sm, M_au, M_wt,
+#                                      S_sp, S_sm, S_au, S_wt,
+#                                      R_sp, R_sm, R_au, R_wt))
 return (output_transp)
 }
+```
+
+```{r}
+# Check the behaviour of the FOI
+# output_transp %>% ggplot() +
+#   geom_line(aes(x = time, y = lambda_spring), colour = "green") +
+#   geom_line(aes(x = time, y = lambda_summer), colour = "orange") +
+#   geom_line(aes(x = time, y = lambda_autumn), colour = "yellow") +
+#   geom_line(aes(x = time, y = lambda_winter), colour = "blue") +
+#   ylim(0.020, 0.0203)
+
+# output_transp %>% ggplot() +
+#   geom_line(aes(x = time, y = spring_component), colour = "green") +
+#   geom_line(aes(x = time, y = summer_component), colour = "orange") +
+#   geom_line(aes(x = time, y = autumn_component), colour = "yellow") +
+#   geom_line(aes(x = time, y = winter_component), colour = "blue") +
+#   ylim(0.00001, 0.00006)
 ```
 
 
@@ -212,7 +243,7 @@ coda::effectiveSize(tracefinal)
 summary(tracefinal)
 
 # save the trace
-saveRDS(trace, "/Users/juliamayer/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/LSTHM project/Extension/Odin model with BT.rds")
+saveRDS(trace, "/Users/juliamayer/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/LSTHM project/Extension/Odin model with BT and 1 M.rds")
 ```
 
 ```{r}
@@ -252,21 +283,21 @@ colnames(trajquantiles_inc) <- c("agemid", "low95", "median", "up95")
 
 
 # FOI per birth cohort
-# lambda_spquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
-#                                   function(x) quantile(x[,"lambda_sp"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-# colnames(lambda_spquantiles) <- c("agemid", "low95", "median", "up95")
-# 
-# lambda_smquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
-#                                   function(x) quantile(x[,"lambda_sm"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-# colnames(lambda_smquantiles) <- c("agemid", "low95", "median", "up95")
-# 
-# lambda_auquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
-#                                   function(x) quantile(x[,"lambda_au"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-# colnames(lambda_auquantiles) <- c("agemid", "low95", "median", "up95")
-# 
-# lambda_wtquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
-#                                   function(x) quantile(x[,"lambda_wt"], prob = c(0.025, 0.5, 0.975), na.rm=T)) 
-# colnames(lambda_wtquantiles) <- c("agemid", "low95", "median", "up95")
+lambda_spquantiles <- plyr::ddply(.data = trajsim, .variables = "time",
+                                  function(x) quantile(x[,"lambda_spring"], prob = c(0.025, 0.5, 0.975), na.rm=T))
+colnames(lambda_spquantiles) <- c("agemid", "low95", "median", "up95")
+
+lambda_smquantiles <- plyr::ddply(.data = trajsim, .variables = "time",
+                                  function(x) quantile(x[,"lambda_summer"], prob = c(0.025, 0.5, 0.975), na.rm=T))
+colnames(lambda_smquantiles) <- c("agemid", "low95", "median", "up95")
+
+lambda_auquantiles <- plyr::ddply(.data = trajsim, .variables = "time",
+                                  function(x) quantile(x[,"lambda_autumn"], prob = c(0.025, 0.5, 0.975), na.rm=T))
+colnames(lambda_auquantiles) <- c("agemid", "low95", "median", "up95")
+
+lambda_wtquantiles <- plyr::ddply(.data = trajsim, .variables = "time",
+                                  function(x) quantile(x[,"lambda_winter"], prob = c(0.025, 0.5, 0.975), na.rm=T))
+colnames(lambda_wtquantiles) <- c("agemid", "low95", "median", "up95")
 
 # Parameter estimates
 Pquantiles <- plyr::ddply(.data = trajsim, .variables = "time", 
@@ -330,5 +361,131 @@ fit <- ggplot() + theme_bw() + ggtitle("Model fit") +
   xlab("age (days)") + ylab("proportion seroconverted") 
 
 fit
+```
+
+```{r}
+lambda_sp <- ggplot() + theme_bw() + ggtitle("FOI for the spring birth cohort (no daycare)") +
+  geom_ribbon(data = lambda_spquantiles, aes(x = agemid, ymin = low95, ymax = up95), fill = "red", alpha = 0.3) +
+  geom_line(data = lambda_spquantiles, aes(x = agemid, y = median), color = "red") +
+  xlab("age (days)") + ylab("FOI") + xlim(0, 365)
+lambda_sp
+```
+
+```{r}
+lambda_sm <- ggplot() + theme_bw() + ggtitle("FOI for the summer birth cohort (no daycare)") +
+  geom_ribbon(data = lambda_smquantiles, aes(x = agemid, ymin = low95, ymax = up95), fill = "red", alpha = 0.3) +
+  geom_line(data = lambda_smquantiles, aes(x = agemid, y = median), color = "red") +
+  xlab("age (days)") + ylab("FOI") + xlim(0, 365)
+lambda_sm
+```
+
+```{r}
+lambda_au <- ggplot() + theme_bw() + ggtitle("FOI for the autumn birth cohort (no daycare)") +
+  geom_ribbon(data = lambda_auquantiles, aes(x = agemid, ymin = low95, ymax = up95), fill = "red", alpha = 0.3) +
+  geom_line(data = lambda_auquantiles, aes(x = agemid, y = median), color = "red") +
+  xlab("age (days)") + ylab("FOI") + xlim(0, 365)
+lambda_au
+```
+
+```{r}
+lambda_wt <- ggplot() + theme_bw() + ggtitle("FOI for the winter birth cohort (no daycare)") +
+  geom_ribbon(data = lambda_wtquantiles, aes(x = agemid, ymin = low95, ymax = up95), fill = "red", alpha = 0.3) +
+  geom_line(data = lambda_wtquantiles, aes(x = agemid, y = median), color = "red") +
+  xlab("age (days)") + ylab("FOI") + xlim(0, 365)
+lambda_wt
+```
+```{r}
+# Testing the likelihood function
+theta1 <- c(spring_comp = 0.00001, summer_comp = 0.02002, autumn_comp = 0.00003, winter_comp = 0.00004)
+
+log1 <- loglik(theta1)
+
+likelihood_values <- data.frame(spring_comp = double(),
+                                summer_comp = double(), 
+                                autumn_comp = double(),
+                                winter_comp = double (),
+                                loglikelihood = double ())
+
+likelihood_values <- likelihood_values %>% add_row(spring_comp = theta1[1], 
+                                                   summer_comp = theta1[2],
+                                                   autumn_comp = theta1[3],
+                                                   winter_comp = theta1[4],
+                                                   loglikelihood = log1)
+
+theta2 <- c(spring_comp = 0.003478, summer_comp = 0.00060, autumn_comp = 0.00264, winter_comp = 0.00692) # Values from old model
+
+log2 <- loglik(theta2)
+
+likelihood_values <- likelihood_values %>% add_row(spring_comp = theta2[1], 
+                                                   summer_comp = theta2[2],
+                                                   autumn_comp = theta2[3],
+                                                   winter_comp = theta2[4],
+                                                   loglikelihood = log2)
+
+theta3 <- c(spring_comp = 0.000078, summer_comp = 0.00060, autumn_comp = 0.00264, winter_comp = 0.00692)
+
+log3 <- loglik(theta3)
+
+likelihood_values <- likelihood_values %>% add_row(spring_comp = theta3[1], 
+                                                   summer_comp = theta3[2],
+                                                   autumn_comp = theta3[3],
+                                                   winter_comp = theta3[4],
+                                                   loglikelihood = log3)
+```
+
+```{r}
+# Check likelihood varying spring
+n = 100
+likelihood_values_list <- list()
+set.seed(34)
+
+for (i in 1:n) {
+    # ... make some data
+    theta <- c(spring_comp = runif(n = 1, min = 0, max = 0.01), 
+              summer_comp = 0.00060, 
+              autumn_comp = 0.00264, 
+              winter_comp = 0.00692)
+    log <- loglik(theta)
+    dat <- data.frame(spring_comp = theta[1], 
+                       summer_comp = theta[2],
+                       autumn_comp = theta[3],
+                       winter_comp = theta[4],
+                      loglikelihood = log)
+    likelihood_values_list [[i]] <- dat # add it to your list
+}
+
+likelihood_values <- do.call(rbind, likelihood_values_list)
+
+likelihood_values %>% ggplot() +
+  geom_line(aes(x = spring_comp, y = loglikelihood)) +
+  geom_point(aes(x=0.003478, y=-237.64), colour="blue")
+```
+
+```{r}
+# Check likelihood varying summer
+n = 100
+likelihood_values_list <- list()
+set.seed(34)
+
+for (i in 1:n) {
+    # ... make some data
+    theta <- c(spring_comp = 0.00003478,
+              summer_comp = runif(n = 1, min = 0, max = 0.001), 
+              autumn_comp = 0.00264, 
+              winter_comp = 0.00692)
+    log <- loglik(theta)
+    dat <- data.frame(spring_comp = theta[1], 
+                       summer_comp = theta[2],
+                       autumn_comp = theta[3],
+                       winter_comp = theta[4],
+                      loglikelihood = log)
+    likelihood_values_list [[i]] <- dat # add it to your list
+}
+
+likelihood_values <- do.call(rbind, likelihood_values_list)
+
+likelihood_values %>% ggplot() +
+  geom_line(aes(x = summer_comp, y = loglikelihood)) +
+  geom_point(aes(x=0.00060, y=-237.64), colour="blue")
 ```
 
